<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Is It Christmas?</string>
    
    <string name="menu_preferences">Christmas Preferences</string>
    
    <string name="notify_single_enable">Tell me on Christmas</string>
    <string name="notify_single_enable_summary_on">Midnight notification on 12/25</string>
    <string name="notify_single_enable_summary_off">No midnight notification on 12/25</string>
    
    <string name="notify_recurring_enable">Update me regularly</string>
    <string name="notify_recurring_enable_summary_on">You will be kept up to date</string>
    <string name="notify_recurring_enable_summary_off">You will not be kept up to date</string>
    
    <string name="notify_recurring_interval">How regularly</string>
    <string-array name="notify_recurring_interval_names">
    	<item>Daily at noon</item>
    	<item>Every 15 minutes</item>
    </string-array>
    <string-array name="notify_recurring_interval_values">
    	<item>daily</item>
    	<item>fifteen</item>
    </string-array>
    
    <string name="notify_vibrate">Tremble</string>
    <string name="notify_vibrate_summary_on">Tremble on notify</string>
    <string name="notify_vibrate_summary_off">Do not tremble on notify</string>
    
    <string name="notify_ringtone">Select a carol</string>
</resources>